kubernetes-files/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocksense-backend
  namespace: stocksense
  labels:
    app: stocksense-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stocksense-backend
  template:
    metadata:
      labels:
        app: stocksense-backend
    spec:
      containers:
        - name: stocksense-backend
          image: veecode34/stocksense-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 20
