kubernetes-files/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocksense-frontend
  namespace: stocksense
  labels:
    app: stocksense-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stocksense-frontend
  template:
    metadata:
      labels:
        app: stocksense-frontend
    spec:
      containers:
        - name: stocksense-frontend
          image: veecode34/stocksense-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
