kubernetes-files/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocksense-ml-service
  namespace: stocksense
  labels:
    app: stocksense-ml-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stocksense-ml-service
  template:
    metadata:
      labels:
        app: stocksense-ml-service
    spec:
      containers:
        - name: stocksense-ml-service
          image: veecode34/stocksense-ml-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7860

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /health
              port: 7860
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: 7860
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
