kubernetes-files/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stocksense-backend
  namespace: stocksense
  labels:
    app: stocksense-backend
spec:
  type: ClusterIP
  selector:
    app: stocksense-backend
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
