kubernetes-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stocksense-ingress
  namespace: stocksense
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: stocksense-backend
                port:
                  number: 3001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: stocksense-frontend
                port:
                  number: 80
